# embedded-deformation-cpp

./: CMakeLists.txt  buildConnectivity.h  deformation_graph.h  fast_marching.cpp  fast_marching.h  main.cpp  test_FPS.cpp  utils.hpp
resources/: dress2_high.ply  dress2_low.ply  vmod_high.ply  vmod_low.ply
